<resources>
    <string name="app_name">Alert</string>
    <string name="pinch_text_view">Alert</string>
    <string name="action_settings">Settings</string>
    <string name="start_button">"Start"</string>
    <string name="title_activity_form">FormActivity</string>
    <string name="form">Personal Medical Information Form</string>
    <string name="user_name">Name</string>
    <string name="dob">Date of Birth</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="email">E-mail</string>
    <string name="address">Address</string>
    <string name="number">Number</string>
    <string name="hospital">Hospital Preference</string>
    <string name="blank"> </string>
    <string name="enumber">Enter your emergency numbers</string>
    <string name="submit">Submit</string>
    <string name="submit_call">Call</string>
    <string name="sos">SOS</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">MainActivity</string>



</resources>
