<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#b22222"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.app.pinch.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/blank"
        android:id="@+id/location"
        android:layout_marginBottom="104dp"
        android:layout_above="@+id/smsButton"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/smsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:padding="64dp"
        android:layout_marginTop="134dp"
        android:text="@string/sos"
        android:textSize="20sp" />

    <Button
        android:id="@+id/call_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="32dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="101dp"
        android:onClick="call"
        android:text="@string/submit_call" />
</RelativeLayout>
