
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainContainer"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
android:padding="16sp"
    android:gravity="center"
    android:orientation="vertical" >
    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="center_horizontal" >
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/form"
                android:id="@+id/formTextView"
                android:textSize="24sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/nameTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".75"
                        android:text="@string/user_name"
                        android:textSize="22sp"/>

                    <EditText
                        android:id="@+id/nameEditText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.25"
                        android:text="@string/blank"
                        android:inputType="textPersonName" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="3dp">
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/dateTextView"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".75"
                        android:text="@string/dob"
                        android:textSize="22sp"/>

                    <EditText
                        android:id="@+id/dateEditText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.25"
                        android:text="@string/blank"
                        android:inputType="date"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="3dp">
                </LinearLayout>


                    <RadioGroup
                        android:id="@+id/radio_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >
                        <RadioButton
                            android:layout_weight="1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/male"
                            android:id="@+id/maleRadioButton"
                            android:textSize="20sp"/>
                        <RadioButton
                            android:layout_weight="1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/female"
                            android:id="@+id/femaleRadioButton"
                            android:textSize="20sp"/>
                    </RadioGroup>



                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:id="@+id/emailTextView"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".75"
                        android:text="@string/email"
                        android:textSize="22sp"/>

                    <EditText
                        android:id="@+id/emailEditText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.25"
                        android:text="@string/blank"
                        android:inputType="textEmailAddress"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="3dp">
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:id="@+id/emergencyTextView"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".75"
                        android:textStyle="bold"
                        android:text="@string/enumber"
                        android:textSize="22sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="30dp">
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="horizontal"
                        >
                        <TextView
                            android:id="@+id/number1"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight=".75"
                            android:text="1."
                            android:textSize="22sp"/>
                        <EditText
                            android:id="@+id/enumber1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.25"
                            android:text="@string/blank"
                            android:inputType="phone"/>


                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="horizontal"
                        >
                        <TextView
                            android:id="@+id/number2"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight=".75"
                            android:text="2."
                            android:textSize="22sp"/>
                        <EditText
                            android:id="@+id/enumber2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.25"
                            android:text="@string/blank"
                            android:inputType="phone"/>


                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="horizontal"
                        >
                        <TextView
                            android:id="@+id/number3"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight=".75"
                            android:text="3."
                            android:textSize="22sp"/>
                        <EditText
                            android:id="@+id/enumber3"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.25"
                            android:text="@string/blank"
                            android:inputType="phone"/>


                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="horizontal"
                        >
                        <TextView
                            android:id="@+id/number4"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight=".75"
                            android:text="4."
                            android:textSize="22sp"/>
                        <EditText
                            android:id="@+id/enumber4"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.25"
                            android:text="@string/blank"
                            android:inputType="phone"/>


                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="horizontal"
                        >
                        <TextView
                            android:id="@+id/number5"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight=".75"
                            android:text="5."
                            android:textSize="22sp"/>
                        <EditText
                            android:id="@+id/enumber5"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.25"
                            android:text="@string/blank"
                            android:inputType="phone"/>


                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:id="@+id/button"
                android:layout_gravity="center_horizontal"
                />




            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/blank"
                android:id="@+id/textView"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>


